# IMAS-Java

./: .gitignore  .readthedocs.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPODef2Java.xsl  CacheMonitor.java  IDSDef2Java.xsl  Makefile  Makefile.Linux  Makefile.Windows  README.md  identifiers.xsl
.svn/: entries
.svn/text-base/: CPODef2Java.xsl.svn-base  CacheMonitor.java.svn-base  Makefile.svn-base
ci/: IMAS-AL-Java-dev.eb.in  IMAS-AL-Java-develop-foss-2020b.eb.in  IMAS-AL-Java-develop-intel-2020b.eb.in  build_and_test.sh  build_docs.sh
common/: CMakeLists.txt  al_env.sh.in  dd_version.xsl  identifiers.common.xsl  list_idss.xsl  xsltproc.py
common/cmake/: ALBuildDataDictionary.cmake  ALBuildDocumentation.cmake  ALCommonConfig.cmake  ALCore.cmake  ALDetermineVersion.cmake  ALExampleUtilities.cmake  ALLocalPaths.cmake  ALSetCompilerFlags.cmake
doc/: .gitignore  Makefile  api_constants.rst  api_dbentry.rst  api_ids.rst  api_util.rst  api_utilities.rst  building_installing.rst  conf.py  conf.rst  dev_guide.rst  identifiers.rst  imas.rst  imas_uri.rst  index.rst  load_store_ids.rst  partial_get  plugins.rst  plugins_architecture.rst  plugins_examples.rst  requirements.txt  use_ids.rst  using_al.rst
doc/code_samples/: dbentry_create  dbentry_get  dbentry_getSample  dbentry_getslice  dbentry_list_all_occurrences  dbentry_open  dbentry_put  dbentry_put_slice  identifier_example1  identifier_example2  identifier_example3  ids_array_of_structures_node  ids_array_of_structures_resize  ids_copy  ids_create  ids_data_node  ids_deallocate  ids_is_defined  ids_structures_node  ids_validate  imas_hello_world.java  resize_array
doc/code_samples/java/imasjava/examples/: Example001_OpenDatabase.java  Example002_fillingDataInIDS.java  Example003_writeDataIntoEntry.java  Example004_readDataFromEntry.java  TestNewExamples.java  example003_writeDataIntoEntry.java  testNewExamples.java
doc/doc_common/: building_installing.rst  dev_guide.rst  identifiers.rst  imas.rst  imas_uri.rst  load_store_ids.rst  requirements.txt  use_ids.rst  using_al.rst
doc/examples/: .gitignore  000_how_to_run_examples.rst  001_1_create_db_entry_legacy.rst  001_2_open_URI_legacy.rst  001_3_open_URI_path.rst  001_open_database.rst  002_1_create_ids.rst  002_2_default_values_aos_operations.rst  002_3_copying_and_validating_ids.rst  002_fill_data_in_ids.rst  003_1_put_entire_ids.rst  003_2_put_slice.rst  003_3_put_into_non_default_occurrence.rst  003_write_data_into_entry.rst  004_1_read_entire_ids.rst  004_2_read_slice.rst  004_read_data_from_entry.rst  conf.py  examples_ToC.rst  index.rst  set-venv.sh
examples/: CMakeLists.txt  CommonValidateUtilities.java  Makefile  TestCoreProfilesEmpty.java  TestCoreProfilesGet.java  TestCoreProfilesGetSlice.java  TestCoreProfilesOpen.java  TestCoreProfilesOpen_Force_Create.java  TestCoreProfilesPut.java  TestCoreProfilesPutSlice.java  TestCoreProfilesSampleGet.java  TestCoreProfilesSerialize.java  TestCoreProfilesValidate.java  TestDistributionsValidate.java  TestGyrokineticsValidate.java  TestIdentifiers.java  TestMagneticsValidate.java  TestPfActiveGet.java  TestPfActiveGetSlice.java  TestPfActivePut.java  TestPfActivePutSlice.java  TestResizeArray.java  TestVersion.java  TestWavesValidate.java
examples/new-examples/: build-and-run.sh  test_new_examples.java
examples/new-examples/examples/: example001_OpenDatabase.java
examples/new-examples/imasjava/examples/: example001_OpenDatabase.java  example002_fillingDataInIDS.java  example003_writeDataIntoEntry.java  example004_readDataFromEntry.java  testNewExamples.java  test_new_examples.java
imasjava/: UALException.java  Vect1DBoolean.java  Vect1DDouble.java  Vect1DFloat.java  Vect1DString.java  Vect2DFloat.java  Vect3DDouble.java  Vect3DFloat.java  Vect5DDouble.java  Vect7DDouble.java
src/imasjava/: ALException.java  ALLowLevel.java  Complex.java  CoordinateValidation.java  LimitedSizeStringBuilder.java  LimittedSizeStringBuilder.java  StringLimitException.java  SummaryString.java  UALException.java  UALLowLevel.java  ValidationException.java  Vect1DBoolean.java  Vect1DComplex.java  Vect1DDouble.java  Vect1DFloat.java  Vect1DInt.java  Vect1DString.java  Vect2DComplex.java  Vect2DDouble.java  Vect2DFloat.java  Vect2DInt.java  Vect3DComplex.java  Vect3DDouble.java  Vect3DFloat.java  Vect3DInt.java  Vect4DComplex.java  Vect4DDouble.java  Vect5DComplex.java  Vect5DDouble.java  Vect6DComplex.java  Vect6DDouble.java  Vect7DComplex.java  Vect7DDouble.java  VectComplex.java  VectGeneric.java
src/imasjava/utilities/: ImasReflection.java
src/imasjava/wrapper/: LowLevel.java  Wrapper.java
tests/generator/: Makefile  Makefile.Windows  TestSuiteJava.xsl
tests/generator/src/: Checker.java  Generator.java  Helper.java
tests/junit/imasjava/: LimitedSizeStringBuilderTest.java  LimittedSizeStringBuilderTest.java
ualmemory/.svn/: entries
ualmemory/javainterface/: IDS.java  TestEquilibrium.java.obsolete  TestUAL.java  UALAccess.java  UALException.java  UALLowLevel.java  Vect1DBoolean.java  Vect1DDouble.java  Vect2DDouble.java  Vect3DFloat.java  Vect7DDouble.java  imas.java
ualmemory/javainterface/.svn/: entries
ualmemory/javainterface/.svn/text-base/: TestUAL.java.svn-base  UALLowLevel.java.svn-base  Vect1DFloat.java.svn-base  Vect1DInt.java.svn-base  Vect1DString.java.svn-base  Vect2DFloat.java.svn-base  Vect2DInt.java.svn-base  Vect3DDouble.java.svn-base  Vect3DInt.java.svn-base  Vect4DDouble.java.svn-base  Vect5DDouble.java.svn-base  Vect6DDouble.java.svn-base
wrapper/: Makefile  Makefile.Linux  Makefile.MacOS  Makefile.Windows  imasjava_wrapper_LowLevel.cpp  imasjava_wrapper_LowLevel.h
